--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 html,
 body {
-  max-width: 100%;
-  overflow-x: hidden;
+  max-width: 100vw !important;
+  overflow-x: hidden !important;
   background-color: #1a202c;
 }
